--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,8 +4,8 @@
 	width: 1000px;
 	height: 150px;
 	background-color: gray;
-	border: 2px solid black;
-	border-radius: 4px;
+	border: 2px solid #453A38;
+	border-radius: 7px;
 	
 }
 
