--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,15 +23,14 @@
 	
 }
 
-.sideText {
-	
-	text-align:left;
-	
-}
-
-
 div > * {
 	
 	text-align:center;
+	
+}
+
+.sideText > *{
+	
+	text-align:left;
 	
 }
